# ohara

./: .gitignore  README.md  app.db  config-v2.json  config.example.json  config.json  pyproject.toml
ai_processor/: process_images.py  process_images_all.py
ai_processor/utils/: __init__.py  ai_client.py  config.py  console_utils.py  file_operations.py  ocr_utils.py  prompt_builder.py  schemas.py
app/: auth.py  database.py  main.py  models.py
app/routers/: auth.py  brands.py  categories.py  images.py  nutrition.py  products.py
app/scripts/: make_user.py  migrate_data.py
responses/: categories.json  swiggy_entrypoint_20250819_180331.json
responses/listings/: Appliances.json  Appliances_metadata.json  Atta,_Rice_and_Dal.json  Atta,_Rice_and_Dal_metadata.json  Baby_Care.json  Baby_Care_metadata.json  Bath_and_Body.json  Bath_and_Body_metadata.json  Biscuits_and_Cakes.json  Biscuits_and_Cakes_metadata.json  Books_and_Stationery.json  Books_and_Stationery_metadata.json  Cereals_and_Breakfast.json  Cereals_and_Breakfast_metadata.json  Chips_and_Namkeens.json  Chips_and_Namkeens_metadata.json  Chocolates.json  Chocolates_metadata.json  Cleaning_Essentials.json  Cleaning_Essentials_metadata.json  Clothing.json  Clothing_metadata.json  Cold_Drinks_and_Juices.json  Cold_Drinks_and_Juices_metadata.json  Dairy,_Bread_and_Eggs.json  Dairy,_Bread_and_Eggs_metadata.json  Dry_Fruits_and_Seeds_Mix.json  Dry_Fruits_and_Seeds_Mix_metadata.json  Feminine_Hygiene.json  Feminine_Hygiene_metadata.json  Fragrances.json  Fragrances_metadata.json  Grooming.json  (+53 more)
scraper/: __init__.py
(+56 files in other folders)
